third_party/move/move-compiler-v2/tests/checking/typing/pack_reference_2.exp

Diagnostics:
error: expected `u64` but found `bool` (from assignment or declaration context)
  ┌─ tests/checking/typing/pack_reference_2.move:7:9
  │
7 │         x = false
  │         ^
